--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
+    "aws-cdk": "2.173.4",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "aws-cdk": "2.173.4",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@nestjs/apollo": "^12.2.2",
+    "@nestjs/graphql": "^12.2.2",
+    "apollo-server-lambda": "^3.13.0",
     "aws-cdk-lib": "2.173.4",
-    "constructs": "^10.0.0"
+    "constructs": "^10.0.0",
+    "graphql": "^16.10.0"
   }
 }
